--- a/setup.html
+++ b/setup.html
@@ -53,7 +53,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link" target="_blank" href="cv">CV</a></li>
+        <li class="nav-item"><a class="nav-link" target="_blank" href="/items/cv.docx.pdf">CV</a></li>
         <li class="nav-item"><a class="nav-link" target="_blank" href="https://github.com/amaan-akram"><i
               class="fab fa-github"></i></a></li>
         <li class="nav-item"><a class="nav-link" target="_blank" href="https://www.linkedin.com/in/amaanakram/"><i
