--- a/setup.html
+++ b/setup.html
@@ -100,7 +100,7 @@
       <div class="card mb-4">
         <!-- Card image -->
         <div class="view overlay">
-          <img class="card-img-top" src="https://www.brandeps.com/logo-download/J/Java-logo-vector-01.svg" alt="Card image cap">
+          <img class="card-img-top" src="/img/setup/svg/Java-logo-vector-01.svg" alt="Card image cap">
           <a href="https://www.brandeps.com/logo-download/J/Java-logo-vector-01.svg">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -126,7 +126,7 @@
       <div class="card mb-4">
         <!-- Card image -->
         <div class="view overlay">
-          <img class="card-img-top" src="https://www.brandeps.com/logo-download/P/Python-logo-vector-01.svg" alt="Card image cap">
+          <img class="card-img-top" src="/img/setup/svg/Python-logo-vector-01.svg" alt="Card image cap">
           <a href="https://www.brandeps.com/logo-download/P/Python-logo-vector-01.svg">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -153,7 +153,7 @@
       <div class="card mb-4">
         <!-- Card image -->
         <div class="view overlay">
-          <img class="card-img-top" src="https://www.brandeps.com/logo-download/G/Gopher-logo-vector-01.svg" alt="Card image cap">
+          <img class="card-img-top" src="/img/setup/svg/Gopher-logo-vector-01.svg" alt="Card image cap">
           <a href="https://www.brandeps.com/logo-download/G/Gopher-logo-vector-01.svg">
             <div class="mask rgba-white-slight"></div>
           </a>
