blog post, meta tags and some other stuff

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
     <!-- apparently we need these meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Amaan, Akram, Amaanullah, Amaan Akram, tech, Scottish Programmer, student, software engineer, blog">
     <!--Font Awesome (:-->
     <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
 
@@ -89,6 +90,57 @@
     <div class="container">
 
 
+
+<div id="hidden-content">
+    <div class="clickTheFinalYear">
+        <h1>The Final Year</h1>
+        <h3>September 16, 2020, 14:39</h3>
+    </div>
+
+    <div class="expandTheFinalYear">
+        <p>
+            So, this is the start of the end. It's my 3rd day and I already feel like I've got lots to do!!
+        </p>
+        <p>
+            I'll start with my course choices and my reasoning behind them. For 1st semester I have chosen: 
+            <br>    - Computer Network Security
+            <br>    - Bio Inspired Computing
+            <br>    - Data Mining and Machine Learning  
+            <br> And for 2nd sem I picked:
+            <br>    - Advanced Computer Network Security 
+            <br>    - Big Data Management 
+        </p>
+        <p>
+            Cyber security was something I was always interested in when going into university, so much so 
+            that I was strongly considering studying ethical hacking at Abertay University. I decided however
+            it would probably be best I picked something more broad and less focused, keeping opportunities open
+            and I'm glad I went that route. However It's always something I've been into, hence even in first year
+            were for one of our courses everyone had to make an android App using MIT's App-inventor, I remember
+            the majority of people created little games I felt like the 'odd one out' creating a pretty lame password 
+            manager. Um, but anyway yeh thats why I picked both security and adv security. 
+
+            <p>
+
+            AI was something I initially wasn't too interested in until I reached 3rd Year were we did an intro to AI course.
+            After learning about how important it is and will be, I was hooked and wanted to learn so much more than what 
+            the course originally taught. It was both fun and very challenging and it reminded me of why I wanted to study computer science
+            in the first place.
+            </p>
+        <p>
+            With these course choices in mind, I have the option to get a degree with a specialism in AI or Cyber Security, 
+            or just leave uni with a standard CS degree. This all depends on my final year dissertation...
+        </p>
+
+        <p>
+            About the final year dissertation I'm trying to do something related to the covid-19 pandemic. Nothing confirmed or 
+            detailed yet, just throwing some ideas here and there. However I feel like it would be good, fun and interesting to 
+            do something that's relevant to current scenarios. 
+        </p>
+    </div>
+</div>
+<hr>
+
+    
 
 
 
