--- a/setup.html
+++ b/setup.html
@@ -2,6 +2,7 @@
   <!-- apparently we need these meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Amaan, Akram, Amaanullah, Amaan Akram, tech, Scottish Programmer, student, software engineer, blog">
   <!--Font Aweseom (:-->
   <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
 
