forgot ending woops

--- a/blog.html
+++ b/blog.html
@@ -136,6 +136,12 @@
             detailed yet, just throwing some ideas here and there. However I feel like it would be good, fun and interesting to 
             do something that's relevant to current scenarios. 
         </p>
+
+        <p>
+            Anyway 
+            <br>
+            byebye
+        </p>
     </div>
 </div>
 <hr>
@@ -359,7 +365,6 @@
                     </p>
 
                     Goodnight.
-                    <br> PS Yaseen i sry :C
 
                 </div>
 
