--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
      <!-- apparently we need these meta tags -->
      <meta charset="utf-8">
-     <meta name="description" content="Nice lil personal website about me">
-     <meta name="keywords" content="HTML, CSS, JavaScript, Amaan, Akram, Amaanullah, Amaan Akram, tech, Scottish Programmer, student, software engineer, blog">
+     <meta name="description" content="A little website about me, Amaan">
+     <meta name="keywords" content="Amaan, Akram, Amaanullah, Amaan Akram, Amaanullah Akram, student, software engineer, blog">
      <meta name="author" content="Amaan Akram">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <!-- Font Awesome -->
