favicon and code tidy

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,15 @@
     <!-- apparently we need these meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Amaan, Akram, Amaanullah, Amaan Akram, tech, Scottish Programmer, student, software engineer, blog">
+    <meta name="keywords"
+        content="HTML, CSS, JavaScript, Amaan, Akram, Amaanullah, Amaan Akram, tech, Scottish Programmer, student, software engineer, blog">
+
+    <!--FAVICON-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+
     <!--Font Awesome (:-->
     <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
 
@@ -91,62 +99,70 @@
 
 
 
-<div id="hidden-content">
-    <div class="clickTheFinalYear">
-        <h1>The Final Year</h1>
-        <h3>September 16, 2020, 14:39</h3>
-    </div>
+        <div id="hidden-content">
+            <div class="clickTheFinalYear">
+                <h1>The Final Year</h1>
+                <h3>September 16, 2020, 14:39</h3>
+            </div>
 
-    <div class="expandTheFinalYear">
-        <p>
-            So, this is the start of the end. It's my 3rd day and I already feel like I've got lots to do!!
-        </p>
-        <p>
-            I'll start with my course choices and my reasoning behind them. For 1st semester I have chosen: 
-            <br>    - Computer Network Security
-            <br>    - Bio Inspired Computing
-            <br>    - Data Mining and Machine Learning  
-            <br> And for 2nd sem I picked:
-            <br>    - Advanced Computer Network Security 
-            <br>    - Big Data Management 
-        </p>
-        <p>
-            Cyber security was something I was always interested in when going into university, so much so 
-            that I was strongly considering studying ethical hacking at Abertay University. I decided however
-            it would probably be best I picked something more broad and less focused, keeping opportunities open
-            and I'm glad I went that route. However It's always something I've been into, hence even in first year
-            were for one of our courses everyone had to make an android App using MIT's App-inventor, I remember
-            the majority of people created little games I felt like the 'odd one out' creating a pretty lame password 
-            manager. Um, but anyway yeh thats why I picked both security and adv security. 
+            <div class="expandTheFinalYear">
+                <p>
+                    So, this is the start of the end. It's my 3rd day and I already feel like I've got lots to do!!
+                </p>
+                <p>
+                    I'll start with my course choices and my reasoning behind them. For 1st semester I have chosen:
+                    <br> - Computer Network Security
+                    <br> - Bio Inspired Computing
+                    <br> - Data Mining and Machine Learning
+                    <br> And for 2nd sem I picked:
+                    <br> - Advanced Computer Network Security
+                    <br> - Big Data Management
+                </p>
+                <p>
+                    Cyber security was something I was always interested in when going into university, so much so
+                    that I was strongly considering studying ethical hacking at Abertay University. I decided however
+                    it would probably be best I picked something more broad and less focused, keeping opportunities open
+                    and I'm glad I went that route. However It's always something I've been into, hence even in first
+                    year
+                    were for one of our courses everyone had to make an android App using MIT's App-inventor, I remember
+                    the majority of people created little games I felt like the 'odd one out' creating a pretty lame
+                    password
+                    manager. Um, but anyway yeh thats why I picked both security and adv security.
 
-            <p>
+                <p>
 
-            AI was something I initially wasn't too interested in until I reached 3rd Year were we did an intro to AI course.
-            After learning about how important it is and will be, I was hooked and wanted to learn so much more than what 
-            the course originally taught. It was both fun and very challenging and it reminded me of why I wanted to study computer science
-            in the first place.
-            </p>
-        <p>
-            With these course choices in mind, I have the option to get a degree with a specialism in AI or Cyber Security, 
-            or just leave uni with a standard CS degree. This all depends on my final year dissertation...
-        </p>
+                    AI was something I initially wasn't too interested in until I reached 3rd Year were we did an intro
+                    to AI course.
+                    After learning about how important it is and will be, I was hooked and wanted to learn so much more
+                    than what
+                    the course originally taught. It was both fun and very challenging and it reminded me of why I
+                    wanted to study computer science
+                    in the first place.
+                </p>
+                <p>
+                    With these course choices in mind, I have the option to get a degree with a specialism in AI or
+                    Cyber Security,
+                    or just leave uni with a standard CS degree. This all depends on my final year dissertation...
+                </p>
 
-        <p>
-            About the final year dissertation I'm trying to do something related to the covid-19 pandemic. Nothing confirmed or 
-            detailed yet, just throwing some ideas here and there. However I feel like it would be good, fun and interesting to 
-            do something that's relevant to current scenarios. 
-        </p>
+                <p>
+                    About the final year dissertation I'm trying to do something related to the covid-19 pandemic.
+                    Nothing confirmed or
+                    detailed yet, just throwing some ideas here and there. However I feel like it would be good, fun and
+                    interesting to
+                    do something that's relevant to current scenarios.
+                </p>
 
-        <p>
-            Anyway 
-            <br>
-            byebye
-        </p>
-    </div>
-</div>
-<hr>
+                <p>
+                    Anyway
+                    <br>
+                    byebye
+                </p>
+            </div>
+        </div>
+        <hr>
 
-    
+
 
 
 
@@ -163,29 +179,41 @@
                 <p>
                     Ok, I know its been a couple of days again, don't mind me, just taking lil breaks here nd there no
                     biggie. <br> Anyway stuff ive done over the last few days are again mainly website related, first I
-                    added more pics to my setup page, I still need to finish it, might just bash it out tomorrow, its not
-                    really even that important I just like me some of that technology stuff ygm? idk just thought it made this Website
-                    feel a little more personal, but it's just kinda turned into a place where I flex all my stuff. oh well it iz what it iz.
+                    added more pics to my setup page, I still need to finish it, might just bash it out tomorrow, its
+                    not
+                    really even that important I just like me some of that technology stuff ygm? idk just thought it
+                    made this Website
+                    feel a little more personal, but it's just kinda turned into a place where I flex all my stuff. oh
+                    well it iz what it iz.
                 </p>
                 <p>
-                    Anyway going back to the point, also added a site tracker to see how much traffic I've been getting on 
-                    this website. you Get to see some cool statistics such as what devices people are using and what country everyone is from. It's pretty 
-                    cool wont lie. 
+                    Anyway going back to the point, also added a site tracker to see how much traffic I've been getting
+                    on
+                    this website. you Get to see some cool statistics such as what devices people are using and what
+                    country everyone is from. It's pretty
+                    cool wont lie.
                 </p>
 
                 <p>
-                    And finally the blog page automation. It's pretty simple really, a python script that appends some JS and CSS and also rewrites the blog.html
-                    to insert some HTML boilerplate in the middle of the file. (on line 90 to be specific). Nothing special but I will carry on working on it so
-                    eventually I wont have to touch my blog.html file and everything Will either be done on a separate markdown file or via a python user interface that I'll 
-                    eventually create. Planning on making the python script an exe because permissions are a fkn pain in windows compared to linux. you can check out the 
-                    python script <a href="https://github.com/amaan-akram/AddBlogpost">here</a>. It also auto gens the time stamps and so on so forth, you might have noticed
+                    And finally the blog page automation. It's pretty simple really, a python script that appends some
+                    JS and CSS and also rewrites the blog.html
+                    to insert some HTML boilerplate in the middle of the file. (on line 90 to be specific). Nothing
+                    special but I will carry on working on it so
+                    eventually I wont have to touch my blog.html file and everything Will either be done on a separate
+                    markdown file or via a python user interface that I'll
+                    eventually create. Planning on making the python script an exe because permissions are a fkn pain in
+                    windows compared to linux. you can check out the
+                    python script <a href="https://github.com/amaan-akram/AddBlogpost">here</a>. It also auto gens the
+                    time stamps and so on so forth, you might have noticed
                     the change in the order of my date stamps.... anyway. That's that.
                 </p>
 
                 <p>
-                    So yeah, as shops start to open, im going to be spending less time indoors which means less time coding. That is during the day anyway. I still need to get back on
-                    flutter development, I've decided what my first project is going to be and it's something that my father asked me to create, so will be pretty cool to actually have a 
-                    piece of software that someone actually needs to use day to day. 
+                    So yeah, as shops start to open, im going to be spending less time indoors which means less time
+                    coding. That is during the day anyway. I still need to get back on
+                    flutter development, I've decided what my first project is going to be and it's something that my
+                    father asked me to create, so will be pretty cool to actually have a
+                    piece of software that someone actually needs to use day to day.
                 </p>
 
                 <p>
