--- a/galary.html
+++ b/galary.html
@@ -2,64 +2,89 @@
     <!-- apparently we need these meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <!--Font Aweseom (:-->
-   <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
-   
-   <!-- Yes i used bootstrap OOOKkkk mbbb-->
-  <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <!-- Bootstrap core CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Material Design Bootstrap -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="css/style.css"/>
-   <title>Amaan</title>
+    <!--FAVICON-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+
+    <!--Font Aweseom (:-->
+    <script src="https://kit.fontawesome.com/d1ec1bd279.js" crossorigin="anonymous"></script>
+
+    <!-- Yes i used bootstrap OOOKkkk mbbb-->
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Amaan</title>
 </head>
 
 <body>
 
     <!--Nav Bar-->
     <nav class="navbar  navbar-expand-md  navbar-dark bg-transparent">
-        <a class="navbar-brand"  href = "index.html">AMAANULLAH </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html">AMAANULLAH </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html"><div id ="name">HOME</div><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.html">
+                        <div id="name">HOME</div><span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog.html"><div id ="name">BLOG</div><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/blog.html">
+                        <div id="name">BLOG</div><span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/setup.html"><div id ="name">SETUP</div><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/setup.html">
+                        <div id="name">SETUP</div><span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/galary.html"><div id ="name active">GALLERY <!--THANKS YASEEN :)--> </div><span class="sr-only">(current)</span></a> 
+                    <a class="nav-link" href="/galary.html">
+                        <div id="name active">GALLERY
+                            <!--THANKS YASEEN :)-->
+                        </div><span class="sr-only">(current)</span>
+                    </a>
                 </li>
-                </ul>
+            </ul>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item"><a class="nav-link" target="_blank" href="/items/cv.docx.pdf">CV</a></li>
-                    <li class="nav-item"><a class="nav-link" target="_blank" href="https://github.com/amaan-akram"><i class="fab fa-github"></i></a></li>
-                    <li class="nav-item"><a class="nav-link" target="_blank" href="https://www.linkedin.com/in/amaanakram/"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item"><a class="nav-link" target="_blank" href="/items/cv.docx.pdf">CV</a></li>
+                <li class="nav-item"><a class="nav-link" target="_blank" href="https://github.com/amaan-akram"><i
+                            class="fab fa-github"></i></a></li>
+                <li class="nav-item"><a class="nav-link" target="_blank"
+                        href="https://www.linkedin.com/in/amaanakram/"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
 
-        <!--
+            <!--
         <a href = "index.html"> <div id ="name">BLOG </div></a>
         <a href = "index.html"> <div id ="name">SETUP</div></a> 
         <a href = "index.html"> <div id ="name">IMAGES</div></a> 
         <a href = "/cv"> <div id ="name">CV</div></a>
                 -->
-            </div>
-        </nav>
+        </div>
+    </nav>
 
-      
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script data-goatcounter="https://amaanakram.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script data-goatcounter="https://amaanakram.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
