--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/hiddencontent.css" />
-    <title>Amaan</title>
+    <title>Amaan // Blog</title>
 </head>
 
 <body>
