--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Amaan</title>
+    <title>Amaan Akram // Home</title>
 </head>
 
 <body>
