--- a/setup.html
+++ b/setup.html
@@ -22,7 +22,7 @@
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-  <title>Amaan</title>
+  <title>Amaan // Setup</title>
 </head>
 
 <body>
