--- a/blog.html
+++ b/blog.html
@@ -88,13 +88,51 @@
             <div class="container">
                 <h1>//My
                     <span class="txt-rotate" data-period="2000"
-                        data-rotate='[ "Blog.", "notes", "thoughts", "uhh idk", "fdsafdsa"]'></span>
+                            data-rotate='[ "Blog.", "notes", "thoughts", "uhh idk", "fdsafdsa"]'></span>
             </div>
         </div>
     </header>
 
 
 
+
+    <div id="hidden-content">
+        <div class="clickThesisTopicFinalised!!!">
+            <h1>Thesis Topic Finalised!!!</h1>
+            <h3>October 04, 2020, 11:31</h3>
+        </div>
+    
+        <div class="expandThesisTopicFinalised!!!">
+            <p>
+               Well, kinda..... 
+            </p>
+            <p>
+                Ok, so it's Sunday morning and it's the end of week3 of the first semester, this means uni is really starting to kick off rn,
+                coursework coming left right and center and of course the final year thesis is still a thing that we all have to do during the mayhem.  
+                <br> Good news is, I've pretty much finalised my topic and it's COVID-19 related which is nice. 
+            </p>
+            <p>
+                Essentially I'm going to create 
+                a Mask Detection Model that can run in real time and "on the edge" e.g. bringing computation and data storage all to one local 
+                machine, (instead of using cloud computing for example). In my case my mask detection model will run on a 
+                <a href="https://ark.intel.com/content/www/us/en/ark/products/140109/intel-neural-compute-stick-2.html">Intel Neural Compute Stick 2</a> 
+                connected to either a Raspberry Pi 3 or 4 with a camera module attached. My first goal of the thesis is creating the model and having it run 
+                in real time. Then in the case that the accuracy is bad or the network size is too large, or the overall performance of the model is too slow
+                for the compute stick I will try and use various techniques of quantization and pruning to see which one is best suited for the application of 
+                mask detection.
+            </p>
+            <p>
+                Overall im really happy about the project proposal, I't does seem a little ambitious, however, as it's a topic that I actually find interesting im more excited to 
+                begin than anything else, I just need to get through the 'boring' part which is this whole literacy review, which I should be doing now instead i'm writing this (:
+            </p>
+            <p>
+                byebye you stalkers
+            </p>
+        </div>
+    </div>
+    <hr>
+
+    
     <div class="container">
 
 
