fixed a big oopsie, (Removed "!" from div class')

--- a/blog.html
+++ b/blog.html
@@ -97,12 +97,12 @@
 
 
     <div id="hidden-content">
-        <div class="clickThesisTopicFinalised!!!">
+        <div class="clickThesisTopicFinalised">
             <h1>Thesis Topic Finalised!!!</h1>
             <h3>October 04, 2020, 11:31</h3>
         </div>
     
-        <div class="expandThesisTopicFinalised!!!">
+        <div class="expandThesisTopicFinalised">
             <p>
                Well, kinda..... 
             </p>
