few changes - chair updated

--- a/galary.html
+++ b/galary.html
@@ -75,6 +75,22 @@
         </div>
     </nav>
 
+    
+    <!--Header-->
+    <header>
+        <div class="jumbotron jumbotron-fluid" id="galleryHeader">
+            <div class="container">
+                <h1>//My
+                    <span class="txt-rotate" data-period="2000"
+                            data-rotate='[ "Blog.", "notes", "thoughts", "uhh idk", "fdsafdsa"]'></span>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
