--- a/setup.html
+++ b/setup.html
@@ -418,9 +418,9 @@
       <div class="card mb-4">
         <!-- Card image -->
         <div class="view overlay">
-          <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/71%2B6sA77JOL._AC_SL1500_.jpg"
+          <img class="card-img-top" src="https://www.officechairsuk.co.uk/upload.aspx?width=0&height=0&crop=auto&dest=ProductImages&file=orangeboxg64_7578_01.jpg"
             alt="Card image cap">
-          <a href="https://images-na.ssl-images-amazon.com/images/I/71%2B6sA77JOL._AC_SL1500_.jpg">
+          <a href="https://www.officechairsuk.co.uk/upload.aspx?width=0&height=0&crop=auto&dest=ProductImages&file=orangeboxg64_7578_01.jpg">
             <div class="mask rgba-white-slight"></div>
           </a>
         </div>
@@ -429,14 +429,15 @@
         <div class="card-body elegant-color white-text rounded-bottom">
 
           <!-- Title -->
-          <h4 class="card-title">My Chair</h4>
+          <h4 class="card-title">GiroFlex G64</h4>
           <hr class="hr">
           <!-- Text -->
-          <p class="card-text white-text mb-4">Bought this random chair on amazon, looks nice and all but not the most
-            comfertable, will most likely change soon....
+          <p class="card-text white-text mb-4">Bought to replace my random amazon chair, really firm and keeps my posture kinda in check. Retails for £550 but not trying 
+            to pay that much for a chair so bought it 2nd hand (referb) for A-LOT cheaper. It's really solid has a lot of adjustments including seat pan and back height 
+            which is pretty cool. Only issue I have with it is that it doesn't go down far enough. But that might be because my desk isn't high enough for me. aw well.
           </p>
           <!-- Link -->
-          <a href="https://www.amazon.co.uk/mfavour-Ergonomic-Adjustable-Headrest-Function/dp/B07P6HYSZR/"
+          <a href="https://www.giroflex.com/en/all-products/product-series/giroflex-64.html"
             class="btn btn-secondary">Buy Here</a>
         </div>
       </div>
