--- a/blog.html
+++ b/blog.html
@@ -97,6 +97,48 @@
 
 
     <div id="hidden-content">
+        <div class="clickFinalYearpart1Over">
+            <h1>Final Year Part 1 Over</h1>
+            <h3>December 26, 2020, 00:10</h3>
+        </div>
+
+        <div class="expandFinalYearpart1Over">
+            <p>
+                Hi, semester 1 is over wawwww 
+            </p>
+            <p>
+                So exams went pretty good overall, especially since they were open book + 24hrs. Some questions were though though especially 
+                in Bio inspired computing. But we manage (: 
+            </p>
+            <p>
+                So the big dissertation. I've finished the first half of the writeup which mainly consists of the background knowledge for the overall project will be implemented during
+                the duration of semester 2. I'm a little nervous as I'm still unsure my project is actually possible but again having the entirety of semester 2 will help a ton. Also worried 
+                about the quality of my report when it comes to the grammar side of things, hopefully it makes a decent amount of sense.
+            </p>
+
+            <p>
+                In terms of subjects, only 2 this semester. Advanced Network Security and Big Data Management. Both pretty important subjects, Security will most likely be fun Big Data 
+                probably not as much. but again both pretty important.
+            </p>
+
+            <p>
+                Oh yeh lockdown has started again. guess its another year of being trapped in my room doing uni work for 12hrs a day. cant wait....
+            </p>
+            <p>
+            Btw I need to switch from AWS to github pages. will do soon.
+            </p>
+
+            <p>
+                <br>
+                Anyway byebyebeybeybeybeybeybeybeybey
+            </p>
+        </div>
+    </div>
+    <hr>
+
+    
+
+    <div id="hidden-content">
         <div class="clickThesisTopicFinalised">
             <h1>Thesis Topic Finalised!!!</h1>
             <h3>October 04, 2020, 11:31</h3>
