--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog.html">
+                        <a class="nav-link" href="./blog.html">
                             <div id="name">BLOG</div><span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/setup.html">
+                        <a class="nav-link" href="./setup.html">
                             <div id="name">SETUP</div><span class="sr-only">(current)</span>
                         </a>
                     </li>
