--- a/blog.html
+++ b/blog.html
@@ -107,11 +107,11 @@
                 Hi, semester 1 is over wawwww 
             </p>
             <p>
-                So exams went pretty good overall, especially since they were open book + 24hrs. Some questions were though though especially 
+                So exams went pretty good overall, especially since they were open book + 24hrs. Some questions were difficultishh especially 
                 in Bio inspired computing. But we manage (: 
             </p>
             <p>
-                So the big dissertation. I've finished the first half of the writeup which mainly consists of the background knowledge for the overall project will be implemented during
+                So the big dissertation. I've finished the first half of the writeup which mainly consists of the background knowledge and how the overall project will be implemented during
                 the duration of semester 2. I'm a little nervous as I'm still unsure my project is actually possible but again having the entirety of semester 2 will help a ton. Also worried 
                 about the quality of my report when it comes to the grammar side of things, hopefully it makes a decent amount of sense.
             </p>
