fixed dirs & updated bio

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                     <li class="nav-item ">
                         <a class="nav-link" href="/galary.html">
                             <div id="name">GALLERY
-                                <!--THANKS YASEEN :)-->
                             </div><span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -76,36 +75,9 @@
                             href="https://www.linkedin.com/in/amaanakram/"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
 
-                <!--
-            <a href = "index.html"> <div id ="name">BLOG </div></a>
-            <a href = "index.html"> <div id ="name">SETUP</div></a> 
-            <a href = "index.html"> <div id ="name">IMAGES</div></a> 
-            <a href = "/cv"> <div id ="name">CV</div></a>
-                    -->
             </div>
         </nav>
 
-
-
-        <!--
-        <div class="row">
-            <div class="col-2">
-                <a href = "index.html"> <div id ="name">AMAANULLAH </div></a>
-            </div>
-            <div class="col-2 text-center">
-                <a href = "index.html"> <div id ="name">BLOG </div></a> 
-            </div>
-            <div class="col-2 text-center">
-                <a href = "index.html"> <div id ="name">SETUP</div></a> 
-            </div>
-            <div class="col-2 text-center">
-                <a href = "index.html"> <div id ="name">IMAGES</div></a> 
-            </div>  
-            <div class="col-2 text-right">
-                <a href = "/cv"> <div id ="name">CV</div></a>
-            </div>
-        </div>
-        -->
         <div class="container-fluid">
             <div class="row h-50">
                 <div class="col-1"></div>
@@ -114,8 +86,7 @@
                         <span class="txt-rotate" data-period="2000"
                             data-rotate='[ "Amaan.", "a developer", "a software engineer", "a photographer", "a team player"]'></span>
                     </h1>
-
-                    I'm a student at Heriot-Watt studying Computer Science
+                    I'm a 1<sup>st</sup> class computer science graduate, <br> currently working at <a href="https://iotechsys.com">IOTechsys</a> as a Graduate Software Engineer
                 </div>
             </div>
         </div>
@@ -125,12 +96,7 @@
     <!--Background Image Div-->
 
 
-
-
-
-
-
-
+    
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
